--- a/src/index.css
+++ b/src/index.css
@@ -17,5 +17,5 @@
 
 html {
   scrollbar-gutter: stable both-edges;
-  color: theme(colors.blue.300);
+  color: theme(colors.sky.600);
 }
